[metadata]
name = nr-oaipmh-harvesters
version = 1.0.0
description = OAIPMH harvesters for National repository
authors = 


[options]
python = >=3.9
install_requires =
    oarepo-oaipmh-harvester
    dojson
    Levenshtein


# packages = find:


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
oarepo.oaipmh.transformers =
    nusl = nr_oaipmh_harvesters.nusl:nusl_transformer
